--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
-body{
-    background-color: #00575C;
+* {
+    padding: 0;
+    margin: 0px;
+}
+
+body {
+    background-color:#00575C(216, 172, 118);
+}
+
+.principal {
+    width: 95%;
+    height: auto;
+    margin: auto;
+    padding: 15px;
+    box-shadow: 2px 4px #00575C(255, 0, 0, 0.5); /* Substitua os valores red, green, blue e alpha pelos valores desejados */
+    background-color: #ffffff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.cabecalho {
+    height: 20%;
+    width: 95%;
+    padding: 20px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-bottom: #db7171 solid; /* Substitua pela cor desejada com seis dígitos hexadecimais */
+}
+
+.titulo {
+    text-transform: uppercase;
+    font-size: 24px;
+    text-shadow: 2px 4px rgba(255, 0, 0, 0.5); /* Substitua os valores red, green, blue e alpha pelos valores desejados */
+    color: #dd9a26;
+}
+
+.secao1 {
+    padding: 2px;
+    font-size: 14pt;
+    text-align: center;
 }
